--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         body {
             overflow-x: hidden;
-            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("background\ \(2\).jpg") no-repeat;
+            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("background(2).jpg") no-repeat;
             background-position: center;
             background-size: 100%;
         }
